logs/dag_id=etl_dag/run_id=manual__2024-08-04T23:48:18.465343+00:00/task_id=carga_fatoemailmarketing/attempt=1.log
[2024-08-04T23:48:54.337+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-08-04T23:48:54.349+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: etl_dag.carga_fatoemailmarketing manual__2024-08-04T23:48:18.465343+00:00 [queued]>
[2024-08-04T23:48:54.353+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: etl_dag.carga_fatoemailmarketing manual__2024-08-04T23:48:18.465343+00:00 [queued]>
[2024-08-04T23:48:54.354+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 6
[2024-08-04T23:48:54.360+0000] {taskinstance.py:2330} INFO - Executing <Task(PythonOperator): carga_fatoemailmarketing> on 2024-08-04 23:48:18.465343+00:00
[2024-08-04T23:48:54.377+0000] {warnings.py:112} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:62: DeprecationWarning: This process (pid=3057) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-08-04T23:48:54.379+0000] {standard_task_runner.py:64} INFO - Started process 3059 to run task
[2024-08-04T23:48:54.380+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'etl_dag', 'carga_fatoemailmarketing', 'manual__2024-08-04T23:48:18.465343+00:00', '--job-id', '1396', '--raw', '--subdir', 'DAGS_FOLDER/etl_dag.py', '--cfg-path', '/tmp/tmpxaucgyp5']
[2024-08-04T23:48:54.381+0000] {standard_task_runner.py:91} INFO - Job 1396: Subtask carga_fatoemailmarketing
[2024-08-04T23:48:54.438+0000] {task_command.py:426} INFO - Running <TaskInstance: etl_dag.carga_fatoemailmarketing manual__2024-08-04T23:48:18.465343+00:00 [running]> on host 88edf8e2824b
[2024-08-04T23:48:54.543+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='Gabriel Almeida' AIRFLOW_CTX_DAG_ID='etl_dag' AIRFLOW_CTX_TASK_ID='carga_fatoemailmarketing' AIRFLOW_CTX_EXECUTION_DATE='2024-08-04T23:48:18.465343+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-08-04T23:48:18.465343+00:00'
[2024-08-04T23:48:54.545+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-08-04T23:48:54.653+0000] {base.py:84} INFO - Using connection ID 'postgres_conn' for task execution.
[2024-08-04T23:48:54.681+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-08-04T23:48:54.682+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/dags/etl/dim_load.py", line 90, in load_fatoemailmarketing
    cursor.execute(f"""
psycopg2.errors.SyntaxError: syntax error at or near "T12"
LINE 4: ...para pensar que vamos estudar juntos?', 2024-07-08T12:32:38....
                                                             ^

[2024-08-04T23:48:54.694+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=etl_dag, task_id=carga_fatoemailmarketing, run_id=manual__2024-08-04T23:48:18.465343+00:00, execution_date=20240804T234818, start_date=20240804T234854, end_date=20240804T234854
[2024-08-04T23:48:54.702+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 1396 for task carga_fatoemailmarketing (syntax error at or near "T12"
LINE 4: ...para pensar que vamos estudar juntos?', 2024-07-08T12:32:38....
                                                             ^
; 3059)
[2024-08-04T23:48:54.730+0000] {local_task_job_runner.py:243} INFO - Task exited with return code 1
[2024-08-04T23:48:54.751+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-08-04T23:48:54.753+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
